# pythonlivoxskd2

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: basic_scan.py  point_cloud_viewer.py  record_pointcloud.py
src/Livox-SDK2/include/: livox_lidar_def.h
src/cpp/: livox_interface.cpp  livox_interface.h  pybind_wrapper.cpp
src/livoxsdk2/: __init__.py  callbacks.py  lidar.py  types.py  utils.py
tests/: test_connection.py  test_pointcloud.py
