[tool.poetry]
name = "livoxsdk2"
version = "0.1.0"
description = "A Python wrapper for the Livox LiDAR SDK."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/livoxsdk2"
repository = "https://github.com/yourusername/livoxsdk2"
keywords = ["LiDAR", "Livox", "SDK", "Python"]

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"